--- a/src/components/Menu/MenuItem/MenuItem.module.css
+++ b/src/components/Menu/MenuItem/MenuItem.module.css
@@ -1,6 +1,6 @@
 .menu {
-  /* display: flex;
-  justify-content: space-between; */
+  display: flex;
+  justify-content: space-between;
   margin: 1rem;
   padding-bottom: 1rem;
   border-bottom: 1px solid #ccc;
