--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -27,9 +27,8 @@
 
 .btn button:hover,
 .btn button:active {
-  background-color: #e64a19;
+  background-color: #ffe6dc;
   border-color: #e64a19;
-  color: white;
 }
 
 .btn .order {
@@ -38,26 +37,8 @@
   color: white;
 }
 
-.cart-item {
-  display: flex;
-  justify-content: space-between;
-  padding: 1rem;
-  border-bottom: 1px solid #ff5722;
-}
-.actions {
-  padding-top: 1.5rem;
-}
-
-.actions .price {
-  padding-right: 1rem;
-  font-size: 1.25rem;
-}
-
-.actions button {
-  border: 1px solid #ff5722;
-  border-radius: 5px;
-  background-color: white;
-  color: #ff5722;
-  padding: 0.25rem 0.5rem;
-  margin: 0 1rem;
+.btn .order:hover,
+.btn .order:active {
+  background-color: #d84315;
+  border-color: #e64a19;
 }
