--- a/src/components/Cart/CartItem.module.css
+++ b/src/components/Cart/CartItem.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   padding: 1rem;
-  border-bottom: 1px solid #ff5722;
+  border-bottom: 1px solid #9e9e9e;
 }
 .actions {
   padding-top: 1.5rem;
@@ -16,7 +16,7 @@
 .actions button {
   cursor: pointer;
   border: 1px solid #ff5722;
-  border-radius: 5px;
+  border-radius: 30px;
   background-color: white;
   color: #ff5722;
   padding: 0.25rem 0.5rem;
