--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -1,29 +1,27 @@
 .header {
-  position: fixed;
-  top: 0;
-  left: 0;
+  /* position: fixed; */
+  /* top: 0;
+  left: 0; */
   width: 100%;
   height: 5rem;
-  background-color: #ff8a65;
-  color: white;
+  background-color: white;
+  color: black;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 10%;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  padding: 0 3rem;
   z-index: 10;
+  border-bottom: 1.5px #bdbdbd solid;
 }
 
-.main-image {
-  width: 100%;
-  height: 25rem;
-  z-index: 0;
-  overflow: hidden;
+.buttonContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 15rem;
+  height: 2rem;
 }
 
-.main-image img {
-  width: 110%;
-  height: 100%;
-  object-fit: cover;
-  transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem);
+.seperator {
+  border-right: 1px solid black;
 }
