add authentication logic

--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -25,3 +25,15 @@
 .seperator {
   border-right: 1px solid black;
 }
+
+.button {
+  cursor: pointer;
+  font: inherit;
+  border: none;
+  background-color: white;
+  color: black;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-weight: bold;
+}
