update Header,Shop Detail Page, Login Page

--- a/src/components/Menu/AvailableMenu.module.css
+++ b/src/components/Menu/AvailableMenu.module.css
@@ -1,7 +1,8 @@
 .menu {
-  max-width: 60rem;
-  width: 90%;
-  margin: 2rem auto;
+  /* max-width: 60rem; */
+  width: 40%;
+  padding-top: 8.5rem;
+  margin-right: 2rem;
   animation: meals-appear 1s ease-out forwards;
 }
 
@@ -9,6 +10,12 @@
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+.menu h1 {
+  font-size: 1.25rem;
+  padding-bottom: 0.75rem;
+  border-bottom: 0.0625rem solid #dedede;
 }
 
 .MenuError {
