--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -14,6 +14,13 @@
   border-bottom: 1.5px #bdbdbd solid;
 }
 
+.logo a {
+  font-family: "Oswald", sans-serif;
+  font-size: 30px;
+  text-decoration: none;
+  color: black;
+}
+
 .buttonContainer {
   display: flex;
   flex-direction: row;
