--- a/src/components/Menu/MenuItem/MenuItem.module.css
+++ b/src/components/Menu/MenuItem/MenuItem.module.css
@@ -1,22 +1,22 @@
 .menu {
   display: flex;
   justify-content: space-between;
-  margin: 1rem;
+  margin: 1rem 0rem;
   padding-bottom: 1rem;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid #dedede;
 }
 
 .menu h3 {
   margin: 0 0 0.25rem 0;
+  font-size: 1rem;
 }
 
 .description {
-  font-style: italic;
   font-size: 0.9rem;
 }
 
 .price {
   margin-top: 0.5rem;
   /* font-weight: bold; */
-  font-size: 1.25rem;
+  font-size: 1rem;
 }
