--- a/src/components/Menu/MenuItem/MenuItemForm.module.css
+++ b/src/components/Menu/MenuItem/MenuItemForm.module.css
@@ -5,16 +5,15 @@
 .form button {
   font: inherit;
   cursor: pointer;
-  background-color: #ff5722;
-  border: 1px solid #ff5722;
+  background-color: #2b2b29;
+  border: 0px;
   color: white;
-  padding: 0.25rem 1rem;
-  border-radius: 20px;
-  font-weight: bold;
+  padding: 0.5rem 0.625rem;
+  /* font-weight: bold; */
 }
 
 .form button:hover,
 .form button:active {
-  background-color: #e64a19;
-  border-color: #e64a19;
+  background-color: #424242;
+  border-color: #424242;
 }
