--- a/src/components/Shops/Shop.module.css
+++ b/src/components/Shops/Shop.module.css
@@ -1,13 +1,18 @@
 .shop-container {
-  border: 1px solid black;
+  border: 0.09rem solid #eeedea;
   width: 16rem;
   margin-right: 1rem;
   cursor: pointer;
+  background-color: #fafafa;
 }
 
 .img {
   width: 100%;
   height: 12rem;
+}
+
+.img img {
+  width: 100%;
 }
 
 .title {
