--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -1,6 +1,7 @@
 .card {
   padding: 1rem;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-  border-radius: 15px;
+  /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25); */
+  border: 0.0625rem solid #dedede;
+  border-radius: 0.375rem;
   background-color: white;
 }
