--- a/src/pages/UserPage/AccountPage/AccountPage.module.css
+++ b/src/pages/UserPage/AccountPage/AccountPage.module.css
@@ -1,11 +1,36 @@
+.account-header {
+  padding: 1rem;
+  border-bottom: 0.0625rem solid #dedede;
+}
+
 .account-container {
   width: 60rem;
-  padding: 3rem;
+  padding: 4rem 1rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 .account-sidebar {
   width: 25%;
-  border: 1px solid red;
+}
+
+.account-sidebar ul {
+  padding-left: 0;
+  list-style: none;
+  display: block;
+  height: 100%;
+  margin: 0;
+}
+
+.account-sidebar li {
+  margin-bottom: 1rem;
+  line-height: 3rem;
+  /* height: 100%; */
+}
+.account-sidebar a {
+  align-items: center;
+  font-size: 1rem;
+  padding: 0.75rem;
+  cursor: pointer;
+  color: black;
 }
