--- a/src/components/Cart/CartItem.module.css
+++ b/src/components/Cart/CartItem.module.css
@@ -4,21 +4,47 @@
   padding: 1rem;
   border-bottom: 1px solid #9e9e9e;
 }
+
+.item-info h2 {
+  font-size: 1rem;
+}
+
 .actions {
   padding-top: 1.5rem;
+  width: 30%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-.actions .price {
-  padding-right: 1rem;
-  font-size: 1.25rem;
+.price,
+.amount {
+  /* padding-right: 1rem; */
+  font-size: 1rem;
 }
 
-.actions button {
+.action-btns button {
   cursor: pointer;
-  border: 1px solid #ff5722;
-  border-radius: 30px;
   background-color: white;
-  color: #ff5722;
+  color: black;
   padding: 0.25rem 0.5rem;
-  margin: 0 1rem;
+  /* margin: 0 1rem; */
+  border: 0;
+}
+
+.action-btns button:nth-child(1) {
+  border-right: 0.0625rem solid #dedede;
+}
+
+.action-btns button:nth-child(3) {
+  border-left: 0.0625rem solid #dedede;
+}
+
+.action-btns {
+  border: 0.0625rem solid #dedede;
+  margin: 0;
+  width: 5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
