--- a/src/components/Layout/HeaderCartButton.module.css
+++ b/src/components/Layout/HeaderCartButton.module.css
@@ -7,7 +7,8 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  font-weight: bold;
+  font-family: "Hubballi", cursive;
+  font-weight: 900;
 }
 
 .button:hover,
@@ -15,9 +16,12 @@
 }
 
 .icon {
+  margin-right: 0.5rem;
+}
+
+.icon img {
   width: 1.35rem;
   height: 1.35rem;
-  margin-right: 0.5rem;
 }
 
 .badge {
