--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -42,5 +42,9 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  font-weight: bold;
+  /* font-weight: bold; */
+  font-family: "Hubballi", cursive;
+  font-size: 1rem;
+  font-weight: 900;
+  text-decoration: none;
 }
