--- a/src/pages/UserPage/AccountPage/AccountPage.module.css
+++ b/src/pages/UserPage/AccountPage/AccountPage.module.css
@@ -29,8 +29,10 @@
 }
 .account-sidebar a {
   align-items: center;
-  font-size: 1rem;
+  font-size: 0.9rem;
   padding: 0.75rem;
   cursor: pointer;
   color: black;
+  font-weight: 200;
+  text-decoration: none;
 }
