--- a/src/components/UI/LoginSignupUI.module.css
+++ b/src/components/UI/LoginSignupUI.module.css
@@ -27,6 +27,18 @@
   justify-content: center;
 }
 
+.sidebar h1 {
+  font-size: 2rem;
+  font-weight: 300;
+  margin-bottom: 5rem;
+}
+
+.sidebar h2 {
+  font-size: 1rem;
+  font-weight: 300;
+  margin-bottom: 5rem;
+}
+
 .article {
   width: 50%;
   height: 100%;
