--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -1,8 +1,9 @@
+header {
+  border-bottom: 1.5px #bdbdbd solid;
+}
 .header {
-  /* position: fixed; */
-  /* top: 0;
-  left: 0; */
   width: 100%;
+  max-width: 1600px;
   height: 5rem;
   background-color: white;
   color: black;
@@ -11,7 +12,6 @@
   align-items: center;
   padding: 0 3rem;
   z-index: 10;
-  border-bottom: 1.5px #bdbdbd solid;
 }
 
 .logo a {
