--- a/src/components/Menu/MenuItem/MenuItem.module.css
+++ b/src/components/Menu/MenuItem/MenuItem.module.css
@@ -19,3 +19,23 @@
   margin-top: 0.5rem;
   font-size: 1rem;
 }
+
+.image-container {
+  width: 40%;
+  margin-right: 1em;
+}
+
+.image-container img {
+  width: 100%;
+  /* height: 10rem; */
+}
+
+.menu-info {
+  width: 70%;
+  display: flex;
+  flex-direction: row;
+}
+
+.menu-form {
+  width: 30%;
+}
